Finishing the documentation with Swagger and starting README.md
